@@ -12,6 +12,7 @@ Copyright (C) Artyom V. Poptsov <poptsov.artyom@gmail.com>
 ** New module: =(dsv version)=
     This module contains procedures that return information about the current
     Guile-DSV version.
+** =dsv= now handles =--version= option
 * Changes in version 0.5.0 (2021-12-12)
 ** Bugfixes
 *** Fix a regression in =dsv --summary= introduced in 0.4.1
